force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <description>This object will house the data for Division product transfers that occur between warehouses on a regular basis.</description>
    <label>Transfer</label>
    <nameField>
        <label>Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>