force-app/main/default/objects/Transfer__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Area 1</fullName>
            </value>
            <value>
                <fullName>Area 2</fullName>
            </value>
            <value>
                <fullName>Area 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>