force-app/main/default/objects/Transfer__c/fields/Days_To_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Transfer__c</fullName>
    <description>The number of days it takes the product to be moved from the primary location to the shuttling location.</description>
    <label>Days To Transfer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>