force-app/main/default/objects/Transfer__c/fields/Specific_Days_Only__c.field-meta.xml
<CustomField>
    <fullName>Specific_Days_Only__c</fullName>
    <description>Use to note specific days the transfers run</description>
    <label>Specific Days Only</label>
    <length>50</length>
    <type>Text</type>
</CustomField>