force-app/main/default/objects/Transfer__c/fields/Transfer_Cutoff_Time__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Cutoff_Time__c</fullName>
    <label>Transfer Cutoff Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00pm</fullName>
            </value>
            <value>
                <fullName>01:00pm</fullName>
            </value>
            <value>
                <fullName>02:00pm</fullName>
            </value>
            <value>
                <fullName>02:45pm</fullName>
            </value>
            <value>
                <fullName>03:00pm</fullName>
            </value>
            <value>
                <fullName>03:45pm</fullName>
            </value>
            <value>
                <fullName>04:00pm</fullName>
            </value>
            <value>
                <fullName>04:30pm</fullName>
            </value>
            <value>
                <fullName>04:45pm</fullName>
            </value>
            <value>
                <fullName>05:00pm</fullName>
            </value>
            <value>
                <fullName>05:15pm</fullName>
            </value>
            <value>
                <fullName>05:30pm</fullName>
            </value>
            <value>
                <fullName>05:45pm</fullName>
            </value>
            <value>
                <fullName>06:00pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>