force-app/main/default/objects/Transfer__c/fields/Transfer_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The warehouse that is shipping the product to another warehouse</description>
    <label>Transfer From Location</label>
    <referenceTo>Operational_Data__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>