force-app/main/default/objects/Transfer__c/fields/Transfer_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_Location__c</fullName>
    <description>Values are from the Division Info object with the VOS region and division number appended to the front to make it easier for users to select the correct Division.</description>
    <label>Transfer To Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MA01  DES MOINES</fullName>
            </value>
            <value>
                <fullName>MA03  OMAHA</fullName>
            </value>
            <value>
                <fullName>MA05  KANSAS CITY/LENEXA</fullName>
            </value>
            <value>
                <fullName>MA06  ST LOUIS/FENTON</fullName>
            </value>
            <value>
                <fullName>MA07  ST LOUIS</fullName>
                <isActive>false</isActive>
                <label>MA07  ST LOUIS</label>
            </value>
            <value>
                <fullName>MA08  COLUMBIA</fullName>
            </value>
            <value>
                <fullName>MA12  KANSAS CITY/EDWARDSVILLE</fullName>
            </value>
            <value>
                <fullName>MA13  TOPEKA</fullName>
                <isActive>false</isActive>
                <label>MA13  TOPEKA</label>
            </value>
            <value>
                <fullName>MA14  WICHITA</fullName>
            </value>
            <value>
                <fullName>MA16  JOPLIN</fullName>
            </value>
            <value>
                <fullName>MA19  INDIANAPOLIS/PLAINFIELD</fullName>
            </value>
            <value>
                <fullName>MA24 IL CHICAGO FIDELITY/AURORA</fullName>
            </value>
            <value>
                <fullName>MA25 IL CHICAGO/BRIDGEVIEW</fullName>
            </value>
            <value>
                <fullName>MA26 IA ALGONA</fullName>
            </value>
            <value>
                <fullName>MA35  FARGO</fullName>
            </value>
            <value>
                <fullName>MA36  SIOUX FALLS</fullName>
            </value>
            <value>
                <fullName>MA38  MINNEAPOLIS/BROOKLYN PARK</fullName>
            </value>
            <value>
                <fullName>MA50  CINCINNATI/FAIRFIELD/GILMORE</fullName>
            </value>
            <value>
                <fullName>MA61  CHICAGO/ADDISON</fullName>
            </value>
            <value>
                <fullName>MA62  CHICAGO/AURORA</fullName>
            </value>
            <value>
                <fullName>MA63  MILWAUKEE/PEWAUKEE</fullName>
                <isActive>false</isActive>
                <label>MA63  MILWAUKEE/PEWAUKEE</label>
            </value>
            <value>
                <fullName>MA64  STEVENS POINT</fullName>
            </value>
            <value>
                <fullName>MA65  APPLETON</fullName>
            </value>
            <value>
                <fullName>MA67  MILWAUKEE/NEW BERLIN</fullName>
            </value>
            <value>
                <fullName>MA69  ROCHESTER</fullName>
                <isActive>false</isActive>
                <label>MA69  ROCHESTER</label>
            </value>
            <value>
                <fullName>MA70  PEORIA/MORTON</fullName>
            </value>
            <value>
                <fullName>MA73  DETROIT/ANNEX</fullName>
            </value>
            <value>
                <fullName>MA74  PORT HURON</fullName>
            </value>
            <value>
                <fullName>MA75  DETROIT/ROCHESTER HILL</fullName>
            </value>
            <value>
                <fullName>MA77  PITTSBURGH/MA 77</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>