force-app/main/default/objects/Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Transfer_From_Location__c</columns>
    <columns>Transfer_Cutoff_Time__c</columns>
    <columns>Days_To_Transfer__c</columns>
    <columns>Specific_Days_Only__c</columns>
    <columns>Transfer_To_Location__c</columns>
    <columns>Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>